tests/models/struct/named/string/fail/lt.stderr
error: Support condition is min_length, max_length, alias, default and validate
 --> tests/models/struct/named/string/fail/lt.rs:5:5
  |
5 |     value: String,
  |     ^^^^^
